fix: 图书查询接口